<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="currency">
        <item>CAD</item>
        <item>CHF</item>
       	<item>CNY</item>
       	<item>EUR</item>
       	<item>GBP</item>
       	<item>JPY</item>
       	<item>USD</item>
    </string-array>
    
  	<string-array name="category">
  	    <item>Accommodation</item>
        <item>Air Fare</item>
        <item>Fuel</item>
        <item>Ground Transport</item>
        <item>Meal</item>
        <item>Parking</item>
        <item>Private Automobile</item>
        <item>Registration</item>
        <item>Supplies</item>
       	<item>Vehicle Rental</item>
    </string-array>
    
    <string name="app_name">CMPUT301W15T12</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_claim">AddClaimActivity</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_item_view">ItemViewActivity</string>
    <string name="ChooseGeolocation">Choose Geolocation</string>
    <string name="ChooseHomeGeolocation">Choose Home Geolocation</string>
    <string name="IncludeImage">Include Image</string>
    <string name="IncludeLocation">Include GeoLocation</string>
    <string name="HereGeolocation">Current Location</string>
    <string name="ThereGeolocation">Choose Location</string>
    <string name="ep">Enter Password</string>
    <string name="back">Back</string>
    <string name="editTags">Edit Tags</string>
    <string name="SaveEverything">Save to Server</string>
    <string name="seeLocations">See Locations</string>
    <string name="flag">Flag as Incomplete</string>
    <string name="cp">Confirm Password</string>
    <string name="New_Claim">New Claim</string>
    <string name="Edit_Item">Edit Item</string>
    <string name="Email_Claim">Email Claim</string>
    <string name="Edit_Claim">Edit Claim</string>
    <string name="Submit_Claim">Submit Claim</string>
    <string name="Delete_Claim">Delete Claim</string>
    <string name="Delete_Photo">Delete Photo</string>
    <string name="new_destinations">Add New Destination</string>
    <string name="SeeComments">See Comments</string>
    <string name="Enter_Claim_Name">Enter Claim Name</string>
    <string name="Enter_Status">Enter Status</string>
    <string name="Enter_End_Date">End Date</string>
    <string name="Enter_Start_Date">Start Date</string>
    <string name="Enter_Description">Enter Description</string>
    <string name="Description">Description</string>
    <string name="Add_Claim">Add Claim</string>
    <string name="Enter_Amount">Enter Amount</string>
    <string name="Enter_Currency">Enter Currency (CUR)</string>
    <string name="Enter_Date">Enter Date (YYYY/MM/DD)</string>
    <string name="Enter_Expense_Name">Enter Expense Name</string>
    <string name="Enter_Category">Enter Category</string>
    <string name="Enter_tag">Enter Tag</string>
    <string name="m_tag">Manage Tags</string>
    <string name="New_Expense_Item">New Expense Item</string>
    <string name="Date_Date">Date-Date</string>
    <string name="CN_Status">Claim Name - Status</string>
    <string name="Total">Total</string>
    <string name="Add_Expense_Item">Add Expense Item</string>
    <string name="Choose">Choose</string>
    <string name="Date">Date</string>
    <string name="edit_tags">Edit Tags Everywhere</string>
    <string name="delete_tags">Delete Tags</string>
    <string name="search_tags">Search Tags</string>
    <string name="Expense_Item">Expense Item</string>
    <string name="Category">Category</string>
    <string name="Amount">Amount</string>
    <string name="receipt_photo">Receipt Photo</string>
    <string name="ACurrency">Amount CUR</string>
    <string name="title_activity_expense_item">ExpenseItemActivity</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="email">E-mail</string>
    <string name="save">Save</string>
    <string name="more">See More</string>
    <string name="title_activity_edit_claim">EditClaimActivity</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="Recipient">Recipient</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message</string>
    <string name="Send">Send</string>
    <string name="login">Login</string>
    <string name="Done">Done</string>
    <string name="User_Name">User Name</string>
    <string name="New_Account">Create New Account</string>
    <string name="tags">Tags</string>
    <string name="destinations">Destinations</string>
    <string name="Add_Image">Add Image   </string>
    <string name="Add">Add </string>
    <string name="Flagged">Flagged</string>
    <string name="title_activity_claim_list">ClaimListActivity</string>
    <string name="title_activity_claim">ClaimActivity</string>
    <string name="title_activity_approver">ApproverActivity</string>
    <string name="title_activity_view_photo">ViewPhotoActivity</string>
    <string name="approverAddComment">Add Comment</string>
    <string name="approverApprove">Approve</string>
    <string name="approverReturn">Return</string>
    <string name="title_activity_approver_item">ApproverItemActivity</string>
    <string name="approverphoto">Photo</string>
    <string name="title_activity_add_comments">AddCommentsActivity</string>
    <string name="title_activity_approver_list">ApproverListActivity</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="title_activity_see_comments">SeeCommentsActivity</string>
    <string name="comments">Comments</string>
    <string name="add_comments">Add Comments</string>
    <string name="approvers">Approvers</string>
    <string name="title_claim_page">Claim Page</string>
    <string name="title_activity_edit_clam">EditClamActivity</string>
    <string name="title_activity_choose_list">ChooseListActivity</string>
    <string name="choose_claimant">See Your Claims</string>
    <string name="choose_approver">See Claims Waiting for Approval</string>
    <string name="title_activity_tab_claim">TabClaimActivity</string>
    <string name="title_activity_add_destinations">AddDestinationsActivity</string>
    <string name="tagE">Tag &#8230;</string>
    <string name="tag">Tag</string>
    <string name="title_activity_tag_manager">TagManagerActivity</string>
    <string name="text">Single Click to Edit Long Click to delete</string>
    <string name="title_activity_map">MapActivity</string>

</resources>