<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Recipient"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Subject" />

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.53"
        android:ems="10"
        android:hint="@string/Message" />

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Send" />

</LinearLayout>