<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonitemdelete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="deleteButton"
        android:text="@string/delete" />

    <Button
        android:id="@+id/buttonitemedit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonitemdelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="editButton"
        android:text="@string/edit" />

    <Button
        android:id="@+id/buttonImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonitemedit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textItemCurrency" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textItemName"
        android:gravity="center"
        android:text="@string/Date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textDate"
        android:gravity="center"
        android:text="@string/Category"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textCategory"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textItemCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textItemDescription"
        android:gravity="center"
        android:text="@string/ACurrency"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:text="@string/Expense_Item"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000" />

    <CheckBox
        android:id="@+id/checkBoxIncludePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Flagged"
        android:onClick="onCheckBoxClicked" />

</RelativeLayout>

