<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textStarttoEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textClaimName"
        android:gravity="center"
        android:text="@string/Date_Date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000" />

    <ListView
        android:id="@+id/listExpenseItems"
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:layout_above="@+id/buttonAddItem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/listTotalSum"
        android:visibility="visible" >

    </ListView>

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/Add_Expense_Item" />

    <TextView
        android:id="@+id/textClaimName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/CN_Status"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textClaimDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textStarttoEndDate"
        android:gravity="center"
        android:text="@string/Description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textClaimDestinations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textClaimDescription"
        android:text="@string/destinations" />

    <TextView
        android:id="@+id/listTotalSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textClaimDestinations"
        android:gravity="center"
        android:text="@string/Total"
        android:textSize="20sp" />

</RelativeLayout>