<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/radialgradientback"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textApproverDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textApproverItemName"
        android:gravity="center"
        android:text="@string/Date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textApproverCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textApproverDate"
        android:gravity="center"
        android:text="@string/Category"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textApproverItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textApproverCategory"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textApproverItemCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textApproverItemDescription"
        android:gravity="center"
        android:text="@string/ACurrency"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textApproverItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:text="@string/Expense_Item"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000" />

    <Button
        android:id="@+id/buttonApproverImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textApproverItemCurrency"
        android:text="@string/approverphoto" />

</RelativeLayout>

