<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextNewTag"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonAddTag"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/buttonAddTag"
        android:ems="10"
        android:hint="@string/tag" />

    <Button
        android:id="@+id/buttonDoneTagManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/Done" />

    <ListView
        android:id="@+id/listViewTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonDoneTagManager"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonAddTag" >

    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/text" />

    <Button
        android:id="@+id/buttonAddTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:text="@string/Add" />

</RelativeLayout>
